spacing fix

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -351,6 +351,10 @@ div h2:first-of-type{
     margin-top: 0;
 }
 
+p + h2{
+    margin-top: 64px;
+}
+
 h3 {
     font-size: 1.25rem;    
     line-height: 1.5rem;
@@ -446,7 +450,7 @@ pre {
 }
 
 pre + h2 {
-    margin-top: 56px !important;
+    margin-top: 64px !important;
 }
 
 code {
